--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>FoodMate - Best Food Website!</title>
 </head>
 <body>
-    <h1>FoodMate - Buy Now!</h1>
+    <h1>FoodMate - Buy Now!</h1>ž
+    <p> Best food website</p>
 </body>
 </html>
