--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>FoodMate - Best Food Website!</title>
 </head>
 <body>
-    <h1>FoodMate - Buy Now!</h1>ž
+    <h1>FoodMate - Buy Now!</h1>
     <p> Best food website</p>
+    <footer>Designed by Team</footer>
 </body>
 </html>
