--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>FoodMate - Buy Now!</h1>
     <p> Best food website</p>
+    <p>New para</p>
     <footer>Designed by Team</footer>
 </body>
 </html>
