--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>FoodMate - Buy Now!</h1>
     <p> Best food website</p>
     <p>New para</p>
+    <p>New Main Commit</p>
     <footer>Designed by Team</footer>
 </body>
 </html>
