--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FoodMate - Best Food Website!</title>
+    <title>SplitMate online</title>
+    <link rel="stylesheet" href="">
 </head>
 <body>
     <h1>FoodMate - Buy Now! - 50% OFF</h1>
+    <p>LOREMM</p>
     <footer>Designed by Team</footer>
 </body>
 </html>
